# naver-stocks-collector

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
naver-stocks/: items.py  middlewares.py  pipelines.py  settings.py
naver-stocks/spiders/: stock-categories.py  stock-themes.py
naverstocks/: exporters.py  extensions.py  items.py  pipelines.py  settings.py
naverstocks/spiders/: quotes.py  quotes_after_login.py  quotes_basic_login.py  quotes_infinitely_scrolling.py  stock_categories.py  stock_themes.py  stocks.py
output/: stock_categories.csv  stock_categories_2022-10-14T14-08-27.json  stock_themes.csv
