[tool.poetry]
name = "naver-stocks"
version = "0.1.0"
description = ""
authors = ["Min Byeong-Guk <maxmin93@gmail.com>"]
readme = "README.md"
packages = [{include = "naverstocks"}]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.3"
pymongo = "^4.2.0"
scrapy-playwright = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
